syntax = "proto3";

package v2.entity.post;

option go_package = "github.com/dtc03012/me/protobuf/proto/entity/post";

enum query_option {
  Undefined = 0;
  TitleOrContent = 1;
  Title = 2;
  Content = 3;
  Writer = 4;
  Comment = 5;
}

enum classification_option {
  All = 0;
  Popular = 1;
  Notice = 2;
}

message option {
  query_option query_option = 1;
  classification_option classification_option = 2;
  string query = 3;
  repeated string tags = 4;
}